--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -8,7 +8,7 @@
     tooltipLeftPlacement="top"
     [dropDownHeaderTemplate]="menuHeaderTemplate"
     dropDownHeaderClass="menuHeader">
-    <ngb-tabset style="height: 300px">
+    <ngb-tabset>
       <ngb-tab title="First tab">
         <ng-template ngbTabContent>First tab content</ng-template>
       </ngb-tab>
@@ -31,13 +31,13 @@
   </ng-template>
 
   <br/><br/><br/><br/><br/><br/>
-  <button type="button" class="btn btn-default" (click)="addTab()">add tab</button>
-  <button type="button" class="btn btn-default" (click)="removeTab()">remove tab</button>
+  <button type="button" class="btn btn-success" (click)="addTab()">add tab</button>
+  <button type="button" class="btn btn-danger" (click)="removeTab()">remove tab</button>
   <br/><br/><br/>
   <h4>usage of api:</h4>
-  <button type="button" class="btn btn-default" (click)="reCalcScroll()">re-calculate scroll</button>
+  <button type="button" class="btn btn-primary" (click)="reCalcScroll()">re-calculate scroll</button>
   <div class="btn-group" ngbDropdown>
-    <button id="single-button" type="button" class="btn btn-default" ngbDropdownToggle>
+    <button id="single-button" type="button" class="btn btn-light" ngbDropdownToggle>
       Scroll into view <span class="caret"></span>
     </button>
     <ul ngbDropdownMenu role="menu" aria-labelledby="single-button">
