--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -2,7 +2,8 @@
 @import "~bootstrap/scss/bootstrap-reboot";
 @import "~bootstrap/scss/bootstrap";
 
-@import "../../../dist/ngx-tab-scroll/tab-scroll-flat";
+@import "../../../dist/ngx-tab-scroll/tab-scroll-theme-bootstrap";
+// @import "../../../dist/ngx-tab-scroll/tab-scroll-theme-flatten";
 
 .tabContent{
   background-color: #FBFBFB;
