--- a/projects/ngx-tab-scroll/src/lib/tab-scroll-theme-bootstrap.scss
+++ b/projects/ngx-tab-scroll/src/lib/tab-scroll-theme-bootstrap.scss
@@ -50,6 +50,7 @@ $header-height: 42px;
     }
   }
   > .nav-button {
+    overflow: hidden;
     position: absolute;
     width: $button-width;
     height: $header-height;
@@ -69,18 +70,10 @@ $header-height: 42px;
     &.left-nav-button {
       left: 0;
       border-top-left-radius: 4px;
-      &:before{
-        font-family: 'Glyphicons Halflings';
-        content: '\e079';
-      }
     }
     &.right-nav-button {
       right: 0;
       border-top-right-radius: 4px;
-      &:before{
-        font-family: 'Glyphicons Halflings';
-        content: '\e080';
-      }
     }
   }
   > .dropdown {
@@ -88,6 +81,7 @@ $header-height: 42px;
     top: 0;
     right: 0;
     > .dropdown-toggle {
+      overflow: hidden;
       width: $button-width;
       height: $header-height;
       line-height: $header-height;
@@ -99,9 +93,8 @@ $header-height: 42px;
       background-color: #fff;
       z-index: 10;
       border-radius: 0 4px 0 0;
-      &:before{
-        font-family: 'Glyphicons Halflings';
-        content: '\e114';
+      &:after {
+        display:none;
       }
     }
   }
@@ -123,11 +116,15 @@ $header-height: 42px;
   }
 }
 
-.dropdown-menu > li > a .dropDownTabActiveMark:before {
-  font-family: 'Glyphicons Halflings';
-  content: '\e013';
-  padding-right: 10px;
-  font-size: 12px;
+.dropdown-menu {
+  > li {
+    > a {
+      .dropDownTabActiveMark i {
+        padding-right: 10px;
+        font-size: 12px;
+      }
+    }
+  }
 }
 
 /*make the tabs content be height 100%*/
@@ -143,5 +140,26 @@ $header-height: 42px;
         overflow: auto;
       }
     }
+  }
+}
+
+i[class^=ts-icon] {
+  display: block;
+  width: 100%;
+  margin-top: 15px;
+  margin-left: 6px;
+}
+.ts-icon {
+  &-chevron-left:before {
+    content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1008 1152'><path fill='currentColor' d='M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z'></path></svg>");
+  }
+  &-chevron-right:before {
+    content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1008 1152'><path fill='currentColor' d='M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z'></path></svg>");
+  }
+  &-chevron-down:before {
+    content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1008 1152'><path fill='currentColor' d='M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z'></path></svg>");
+  }
+  &-check:before {
+    content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1008 1152'><path fill='currentColor' d='M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z'></path></svg>");
   }
 }
