--- a/projects/ngx-tab-scroll/src/lib/tab-scroll-theme-flatten.scss
+++ b/projects/ngx-tab-scroll/src/lib/tab-scroll-theme-flatten.scss
@@ -10,7 +10,7 @@ $active-text-color: #000;
 $active-border-color: #999;
 $active-border-radius: 3px;
 
-body .ui-tabs-scrollable {
+.ui-tabs-scrollable {
   position: relative;
 
   > .spacer {
@@ -93,6 +93,7 @@ body .ui-tabs-scrollable {
   }
 
   > .nav-button {
+    overflow: hidden;
     &:hover, &:active {
       background-color: #e5e5e5;
     }
@@ -122,16 +123,10 @@ body .ui-tabs-scrollable {
     &.left-nav-button {
       right: $button-width;
       border-right: 0;
-      &:before {
-        content: '\e079';
-      }
     }
 
     &.right-nav-button {
       right: 0;
-      &:before {
-        content: '\e080';
-      }
     }
   }
   > .dropdown {
@@ -139,6 +134,7 @@ body .ui-tabs-scrollable {
     top: 0;
     right: 0;
     > .dropdown-toggle {
+      overflow: hidden;
       width: $button-width;
       line-height: $header-height;
       height: $header-height;
@@ -152,10 +148,8 @@ body .ui-tabs-scrollable {
       z-index: 10;
       border-radius: 0;
       border-bottom-color: $active-border-color;
-      &:before {
-        font-family: 'Glyphicons Halflings';
-        content: '\e114';
-        font-size: 10px;
+      &:after {
+        display:none;
       }
     }
   }
@@ -181,9 +175,7 @@ body .ui-tabs-scrollable {
   > li {
     > a {
       padding: 3px 15px;
-      > .dropDownTabActiveMark:before {
-        font-family: 'Glyphicons Halflings';
-        content: '\e072';
+      > .dropDownTabActiveMark i {
         padding-right: 7px;
         font-size: 10px;
         color: #777;
@@ -216,6 +208,29 @@ body .ui-tabs-scrollable {
         overflow: auto;
       }
     }
+  }
+}
+
+i[class^=ts-icon] {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+  margin-left: 6px;
+}
+.ts-icon {
+  &-chevron-left:before {
+    content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1008 1152'><path fill='currentColor' d='M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z'></path></svg>");
+  }
+  &-chevron-right:before {
+    content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1008 1152'><path fill='currentColor' d='M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z'></path></svg>");
+  }
+  &-chevron-down:before {
+    margin-top: 12px;
+    content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1008 1152'><path fill='currentColor' d='M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z'></path></svg>");
+  }
+  &-check:before {
+    margin-top: 12px;
+    content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1008 1152'><path fill='currentColor' d='M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z'></path></svg>");
   }
 }
 
