--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -25,8 +25,7 @@
 
   <ng-template #menuHeaderTemplate>
     <div>
-      <a href="#">something</a>
-      <a href="#">nothing</a>
+      <a href="#">something</a>&nbsp;|&nbsp;<a href="#">nothing</a>
     </div>
   </ng-template>
 
