--- a/projects/ngx-tab-scroll/src/lib/tab-scroll-theme-bootstrap.scss
+++ b/projects/ngx-tab-scroll/src/lib/tab-scroll-theme-bootstrap.scss
@@ -9,13 +9,13 @@ $header-height: 42px;
       margin-right: $button-width;
       ngb-tabset {
          > .nav-tabs > li {
-          &:first-child.active a,
+          &:first-child a.active,
           &:first-child a:hover {
             border-top-left-radius: 0;
             border-left: 1px solid transparent;
           }
-          &:last-child.active a,
           &:last-child a,
+          &:last-child a.active,
           &:last-child a:hover {
             border-top-right-radius: 0;
             border-right: 1px solid transparent;
@@ -118,11 +118,12 @@ $header-height: 42px;
 
 .dropdown-menu {
   > li {
-    > a {
-      .dropDownTabActiveMark i {
-        padding-right: 10px;
-        font-size: 12px;
-      }
+    cursor: pointer;
+    > .dropDownTabActiveMark i {
+      display: inline-block;
+      font-size: 12px;
+      padding-right: 10px;
+      width: 10px;
     }
   }
 }
@@ -144,10 +145,10 @@ $header-height: 42px;
 }
 
 i[class^=ts-icon] {
-  display: block;
-  width: 100%;
+  display: inline-block;
   margin-top: 15px;
   margin-left: 6px;
+  width: 100%;
 }
 .ts-icon {
   &-chevron-left:before {
