Correct Scrolling to active tab

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -41,7 +41,7 @@
     </button>
     <ul ngbDropdownMenu role="menu" aria-labelledby="single-button">
       <li role="menuitem" (click)="scrollIntoView()"><a href="#">Selected tab</a></li>
-      <li role="menuitem" (click)="scrollIntoView(6)"><a href="#">Tab index 6</a></li>
+      <li role="menuitem" (click)="scrollIntoView(6)"><a href="#">Tab 5 (index 6)</a></li>
     </ul>
   </div>
 </div>
