#1 moved styles to separate scss asset

--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -4,6 +4,7 @@
 
 // @import "../../../dist/ngx-tab-scroll/tab-scroll-theme-bootstrap";
 @import "../../../dist/ngx-tab-scroll/tab-scroll-theme-flatten";
+@import '../../../dist/ngx-tab-scroll/tab-scroll-icons';
 
 .tabContent{
   background-color: #FBFBFB;
