--- a/projects/ngx-tab-scroll/src/lib/tab-scroll-theme-flatten.scss
+++ b/projects/ngx-tab-scroll/src/lib/tab-scroll-theme-flatten.scss
@@ -14,6 +14,7 @@ $active-border-radius: 3px;
   position: relative;
 
   > .spacer {
+    height: 100%;
     &:not(.hidden-buttons) {
       margin-left: 0;
       margin-right: calc(#{$button-width} + #{$button-width});
@@ -33,6 +34,8 @@ $active-border-radius: 3px;
       }
     }
     ngb-tabset {
+      display: block;
+      height: 100%;
       > .nav-tabs {
         display: block;
         flex-wrap: nowrap;
@@ -87,8 +90,13 @@ $active-border-radius: 3px;
         }
       }
       > .tab-content {
-        margin-top: -1px;
         border-top: 1px solid $active-border-color;
+        height: 100%;
+        margin-top: -1px;
+        > .active {
+          height: 100%;
+          overflow: auto;
+        }
       }
     }
   }
@@ -130,6 +138,7 @@ $active-border-radius: 3px;
       right: 0;
     }
   }
+  > .dropup,
   > .dropdown {
     position: absolute;
     top: 0;
@@ -170,7 +179,7 @@ $active-border-radius: 3px;
   }
 }
 
-.dropdown-menu {
+.ngx-tab-scroll-dropdown-menu {
   min-width: 0;
   box-shadow: 0 3px 6px rgba(0, 0, 0, .2);
   > li {
@@ -190,23 +199,6 @@ $active-border-radius: 3px;
       &:hover {
         color: inherit;
         background-color: #f5f5f5;
-      }
-    }
-  }
-
-}
-
-/*make the tabs content be height 100%*/
-.ui-tabs-scrollable > .spacer {
-  height: 100%;
-  ngb-tabset {
-    display: block;
-    height: 100%;
-    > .tab-content {
-      height: 100%;
-      > .active {
-        height: 100%;
-        overflow: auto;
       }
     }
   }
