Added changes for angular 11. Demo needs to update

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div style="padding:30px">
   <h1>Demo for angular-ui-tab-scroll</h1>
   <a href="https://github.com/VersifitTechnologies/angular-ui-tab-scroll">https://github.com/VersifitTechnologies/angular-ui-tab-scroll</a>
-
   <ngb-tabset (tabChange)="onTabChange($event)">
     <ngb-tab title="Ngb Tabset example">
       <ng-template ngbTabContent>
@@ -30,33 +29,39 @@
           </ngb-tabset>
         </ngx-tab-scroll>
         <br/><br/>
-        <button type="button" class="btn btn-success" (click)="addTab()">add tab</button>
-        <button type="button" class="btn btn-danger" (click)="removeTab()">remove tab</button>
-        <br/>
-      </ng-template>
-    </ngb-tab>
-    <ngb-tab title="Tabset-like example">
-      <ng-template ngbTabContent>
-        <ngx-tab-scroll
-          #tabSetLike
-          tooltipLeftPlacement="top">
-          <app-tabset-like #customTabset></app-tabset-like>
-        </ngx-tab-scroll>
-      </ng-template>
-    </ngb-tab>
-  </ngb-tabset>
-</div>
+            <button type="button" class="btn btn-success" (click)="addTab()">add
+              tab</button>
+            <button type="button" class="btn btn-danger" (click)="removeTab()">remove
+              tab</button>
+            <br/>
+            </ng-template>
+          </ngb-tab>
+          <ngb-tab title="Tabset-like example">
+            <ng-template ngbTabContent>
+              <ngx-tab-scroll
+                #tabSetLike
+                tooltipLeftPlacement="top">
+                <app-tabset-like #customTabset></app-tabset-like>
+              </ngx-tab-scroll>
+            </ng-template>
+          </ngb-tab>
+        </ngb-tabset>
+      </div>
 
-<h4>usage of api:</h4>
-<button type="button" class="btn btn-primary" (click)="reCalcScroll()">re-calculate scroll</button>
-<div class="btn-group" ngbDropdown>
-  <button id="single-button" type="button" class="btn btn-light" ngbDropdownToggle>
-    Scroll into view <span class="caret"></span>
-  </button>
-  <ul ngbDropdownMenu role="menu" aria-labelledby="single-button">
-    <li role="menuitem" (click)="scrollIntoView()"><a href="#">Selected tab</a></li>
-    <li role="menuitem" (click)="scrollIntoView(6)"><a href="#">Tab 5 (index 6)</a></li>
-  </ul>
-</div>
+      <h4>usage of api:</h4>
+      <button type="button" class="btn btn-primary" (click)="reCalcScroll()">re-calculate
+        scroll</button>
+      <div class="btn-group" ngbDropdown>
+        <button id="single-button" type="button" class="btn btn-light"
+          ngbDropdownToggle>
+          Scroll into view <span class="caret"></span>
+        </button>
+        <ul ngbDropdownMenu role="menu" aria-labelledby="single-button">
+          <li role="menuitem" (click)="scrollIntoView()"><a href="#">Selected
+              tab</a></li>
+          <li role="menuitem" (click)="scrollIntoView(6)"><a href="#">Tab 5
+              (index 6)</a></li>
+        </ul>
+      </div>
 
-<router-outlet></router-outlet>
+      <router-outlet></router-outlet>
