--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,67 +1,108 @@
 <div style="padding:30px">
   <h1>Demo for angular-ui-tab-scroll</h1>
   <a href="https://github.com/VersifitTechnologies/angular-ui-tab-scroll">https://github.com/VersifitTechnologies/angular-ui-tab-scroll</a>
-  <ngb-tabset (tabChange)="onTabChange($event)">
-    <ngb-tab title="Ngb Tabset example">
-      <ng-template ngbTabContent>
-        <ng-template #menuHeaderTemplate>
-          <div>
-            <a href="#">something</a>&nbsp;|&nbsp;<a href="#">nothing</a>
-          </div>
-        </ng-template>
+  <ul ngbNav #nav="ngbNav" class="nav-tabs"
+    (navChange)="onTabChange($event)">
+    <li [ngbNavItem]="1">
+      <a ngbNavLink>Ngb Tabset example</a>
+      <ng-template ngbNavContent>
         <ngx-tab-scroll
           #tabScroll
           tooltipLeftPlacement="top"
           [dropDownHeaderTemplate]="menuHeaderTemplate"
           dropDownHeaderClass="menuHeader">
-          <ngb-tabset>
-            <ngb-tab title="First tab">
-              <ng-template ngbTabContent>First tab content</ng-template>
-            </ngb-tab>
-            <ng-template ngFor [ngForOf]="tabs" let-tab>
-              <ngb-tab title="{{tab.heading}}">
-                <ng-template ngbTabContent>{{tab.content}}</ng-template>
-              </ngb-tab>
-            </ng-template>
-            <ngb-tab title="Last tab">
-              <ng-template ngbTabContent>Last tab content</ng-template>
-            </ngb-tab>
-          </ngb-tabset>
+          <div class="parent">
+            <ul ngbNav #navSet="ngbNav" class="nav-tabs">
+              <li [ngbNavItem]="1">
+                <a ngbNavLink>First Tab</a>
+                <ng-template ngbNavContent>
+                  First tab content
+                </ng-template>
+              </li>
+              <li *ngFor="let tab of tabs" [ngbNavItem]="tab.id">
+                <a ngbNavLink>
+                  Tab Heading {{ tab.id }}
+                </a>
+                <ng-template ngbNavContent>
+                  <p>Tab {{ tab.content }} content</p>
+                </ng-template>
+              </li>
+            </ul>
+          </div>
+          <div [ngbNavOutlet]="navSet" class="mt-2"></div>
         </ngx-tab-scroll>
-        <br/><br/>
-            <button type="button" class="btn btn-success" (click)="addTab()">add
-              tab</button>
-            <button type="button" class="btn btn-danger" (click)="removeTab()">remove
-              tab</button>
-            <br/>
+        <button type="button" class="btn btn-success"
+          (click)="addTab()">add
+          tab</button>
+        <button type="button" class="btn btn-danger"
+          (click)="removeTab()">remove
+          tab</button>
+      </ng-template>
+      <!-- <ngb-tabset>
+        <ngb-tab title="Ngb Tabset example">
+          <ng-template ngbTabContent>
+            <ng-template #menuHeaderTemplate>
+              <div>
+                <a href="#">something</a>&nbsp;|&nbsp;<a href="#">nothing</a>
+              </div>
             </ng-template>
-          </ngb-tab>
-          <ngb-tab title="Tabset-like example">
-            <ng-template ngbTabContent>
-              <ngx-tab-scroll
-                #tabSetLike
-                tooltipLeftPlacement="top">
-                <app-tabset-like #customTabset></app-tabset-like>
-              </ngx-tab-scroll>
-            </ng-template>
-          </ngb-tab>
-        </ngb-tabset>
-      </div>
+            <ngx-tab-scroll
+              #tabScroll
+              tooltipLeftPlacement="top"
+              [dropDownHeaderTemplate]="menuHeaderTemplate"
+              dropDownHeaderClass="menuHeader">
+              <ngb-tabset>
+                <ngb-tab title="First tab">
+                  <ng-template ngbTabContent>First tab content</ng-template>
+                </ngb-tab>
+                <ng-template ngFor [ngForOf]="tabs" let-tab>
+                  <ngb-tab title="{{tab.heading}}">
+                    <ng-template ngbTabContent>{{tab.content}}</ng-template>
+                  </ngb-tab>
+                </ng-template>
+                <ngb-tab title="Last tab">
+                  <ng-template ngbTabContent>Last tab content</ng-template>
+                </ngb-tab>
+              </ngb-tabset>
+            </ngx-tab-scroll>
+            <br/><br/>
+                <button type="button" class="btn btn-success"
+                  (click)="addTab()">add
+                  tab</button>
+                <button type="button" class="btn btn-danger"
+                  (click)="removeTab()">remove
+                  tab</button>
+                <br/>
+                </ng-template>
+              </ngb-tab>
+              <ngb-tab title="Tabset-like example">
+                <ng-template ngbTabContent>
+                  <ngx-tab-scroll #tabSetLike tooltipLeftPlacement="top">
+                    <app-tabset-like #customTabset></app-tabset-like>
+                  </ngx-tab-scroll>
+                </ng-template>
+              </ngb-tab>
+            </ngb-tabset> -->
+    </li>
+  </ul>
+  <div [ngbNavOutlet]="nav" class="mt-2"></div>
+</div>
 
-      <h4>usage of api:</h4>
-      <button type="button" class="btn btn-primary" (click)="reCalcScroll()">re-calculate
-        scroll</button>
-      <div class="btn-group" ngbDropdown>
-        <button id="single-button" type="button" class="btn btn-light"
-          ngbDropdownToggle>
-          Scroll into view <span class="caret"></span>
-        </button>
-        <ul ngbDropdownMenu role="menu" aria-labelledby="single-button">
-          <li role="menuitem" (click)="scrollIntoView()"><a href="#">Selected
-              tab</a></li>
-          <li role="menuitem" (click)="scrollIntoView(6)"><a href="#">Tab 5
-              (index 6)</a></li>
-        </ul>
-      </div>
+<h4>usage of api:</h4>
+<button type="button" class="btn btn-primary"
+  (click)="reCalcScroll()">re-calculate
+  scroll</button>
+<div class="btn-group" ngbDropdown>
+  <button id="single-button" type="button" class="btn btn-light"
+    ngbDropdownToggle>
+    Scroll into view <span class="caret"></span>
+  </button>
+  <ul ngbDropdownMenu role="menu" aria-labelledby="single-button">
+    <li role="menuitem" (click)="scrollIntoView()"><a href="#">Selected
+        tab</a></li>
+    <li role="menuitem" (click)="scrollIntoView(6)"><a href="#">Tab 5
+        (index 6)</a></li>
+  </ul>
+</div>
 
-      <router-outlet></router-outlet>
+<router-outlet></router-outlet>
